<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_healing_24"
            android:title="@string/menu_traitement"
          />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/men_rendezvous"
            />
        <item
            android:id="@+id/nav_conseil"
            android:icon="@drawable/ic_baseline_note_24"
            android:title="@string/menu_conseil" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_logout" />
    </group>
</menu>